# AutoBoltAgent

./: README.md  environment.yml  pyproject.toml
.github/workflows/: test.yml
examples/: simple.py
src/autoboltagent/: __init__.py  agents.py  high_fidelity_tool.py  low_fidelity_tool.py  main.py  prompts.py
src/autoboltagent/tools/: fastener_toolkit.py  high_fidelity_tool.py
tests/: test_everything.py
