[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoboltagent"
version = "0.1.0"
description = "AI agent for automatically designing bolts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Sriya"}, {name="Chris McComb", email="ccmcc2012@gmail.com"}]
dependencies = [
    "fenics",
    "meshio",
    "numpy",
    "scipy",
    "matplotlib",
    "gmsh",
    "build123d",
    "pyyaml",
]
[project.optional-dependencies]
test = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]